--- a/uitzendkracht.css
+++ b/uitzendkracht.css
@@ -51,7 +51,7 @@ background-color: red;
 
     .talen{
         grid-column: 1/4;
-        font-size: 0.7em;
+        font-size: 0.6em;
         margin-inline: auto;
     }
 
@@ -96,6 +96,12 @@ background-color: red;
         grid-template-rows: 30px 150px auto auto auto auto auto 100px;
         grid-template-columns: 75px 1fr 75px;
     }  
+
+    .talen{
+        grid-column: 1/4;
+        font-size: 1em;
+        margin-inline: auto;
+    }
 
     #weegschaal {
         padding-block: 50px;
