--- a/uitzendkracht.css
+++ b/uitzendkracht.css
@@ -1,5 +1,7 @@
+/*tekst*/
+
 p{
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;    
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;    
 }
 
 #ondertitel1, #titel2 {
@@ -10,6 +12,8 @@ h1, h2 {
   display: inline; 
   font-family: 'Source Code Variable', monospace; 
 }
+
+/*links*/
 
 .knoppen a{
 text-decoration: none;
@@ -51,7 +55,7 @@ background-color: red;
 
     .talen{
         grid-column: 1/4;
-        font-size: 0.6em;
+        font-size: 0.7em;
         margin-inline: auto;
     }
 
@@ -97,12 +101,6 @@ background-color: red;
         grid-template-columns: 75px 1fr 75px;
     }  
 
-    .talen{
-        grid-column: 1/4;
-        font-size: 1em;
-        margin-inline: auto;
-    }
-
     #weegschaal {
         padding-block: 50px;
         width: 300px; 
@@ -130,6 +128,7 @@ background-color: red;
         grid-template-columns: 400px 1fr 400px;
     }  
 
+
     #weegschaal {
         padding-block: 50px;
         width: 400px; 
@@ -137,12 +136,14 @@ background-color: red;
 }
 
 
+/*algemeen*/
 
 .talen {
 grid-row: 1/2;
 grid-column: 2/4;
 text-align: right;
 padding-block-start: 20px;
+z-index: 100;
 }
 
 
@@ -183,8 +184,6 @@ background-color: hsla(0, 94%, 50%, 0.1);
 padding-inline: 5px;
 }
 
-
-/*sticky maken*/
 .nawoord {
 grid-row: 8/9;
 grid-column: 2/3;
@@ -206,14 +205,20 @@ font-size: 0.9em;
     animation: fadeInimg 3s; 
 }
 
-
-
-
-
-    
+/*animaties*/    
     @keyframes fadeInimg {
         0% { opacity: 0; }
         70% { opacity: 0; }
         100% { opacity: 1; }
       }
+
+    .titel {
+        animation: movein 3s;
+    }
+
+    @keyframes movein {
+        0% { transform: translateX(-20px);
+            opacity: 0;}
+        100% { transform: translateX(0px);}
+    }
 
